Adjusting vars to use specifically defined types. Similar with diamond for inferred type. Adjustments to project classpaths and eclipse settings.